--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://mrrotberry.github.io/custom-select",
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "@hookform/error-message": "^2.0.0",
     "react-hook-form": "^7.15.3",
+    "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
@@ -28,6 +31,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-virtualized": "^9.21.13",
     "@types/styled-components": "^5.1.14",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.1.2"
   },
   "eslintConfig": {
